<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/height_50"
                android:background="@drawable/common_title_drawable">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/li_back"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="@dimen/height_12"
                android:layout_height="@dimen/height_18"
                android:background="@drawable/common_left_icon"
                android:layout_marginLeft="@dimen/height_10"
                android:layout_marginRight="@dimen/height_10"
                android:layout_gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title1_textsize"
                android:textColor="@color/common_dark_text_color"
                android:id="@+id/tv_left"
                android:singleLine="true"
                android:text="@string/back"
                android:layout_marginRight="@dimen/height_10"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:id="@+id/li_tilte_right"
            android:visibility="invisible"
           >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/title1_textsize"
                android:textColor="@color/common_dark_text_color"
                android:id="@+id/tv_right"
                android:singleLine="true"
                android:text="@string/title_cancel"
                android:paddingRight="@dimen/height_10"
                android:paddingLeft="@dimen/height_10"/>

    </LinearLayout>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/title1_textsize"
            android:textColor="@color/common_dark_text_color"
            android:id="@+id/tv_common_title"
            android:text="@string/select_course_ware"
            android:layout_centerInParent="true"/>


</RelativeLayout>