<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_title_bg"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_44"
            android:orientation="horizontal"
            android:background="@drawable/common_title_drawable"
            android:id="@+id/li_chat_all">

        <ImageView
                android:layout_width="@dimen/height_43"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:src="@drawable/audio_chat_face_icon"
                android:id="@+id/iv_input"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="@dimen/height_33"
                android:layout_weight="1"
                style="@style/chat_edit_style"
                android:background="@drawable/audio_chat_input_bg"
                android:paddingLeft="@dimen/common_toptitle_space"
                android:paddingRight="@dimen/common_toptitle_space"
                android:id="@+id/et_bottom_speak"/>


        <ImageView
                android:layout_width="@dimen/height_35"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:src="@drawable/audio_chat_add"
                android:id="@+id/iv_add"/>

        <TextView
                android:layout_width="50dp"
                android:layout_height="27dp"
                android:background="@drawable/chat_input_view_bg"
                android:layout_marginLeft="@dimen/adapter_livelist_item_margin_left"
                android:layout_marginRight="@dimen/adapter_livelist_item_margin_left"
                android:textSize="@dimen/title3_textsize"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="发送"
                android:id="@+id/tv_send"
                android:visibility="gone"
                android:layout_gravity="center_vertical"/>

    </LinearLayout>
    <!--表情-->
    <com.ibrightech.eplayer.sdk.teacher.ui.FaceChatView
            android:id="@+id/face_chat_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    <LinearLayout
            android:id="@+id/layout_add"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_96"
            android:orientation="horizontal"
            android:visibility="gone">

        <RelativeLayout
                android:id="@+id/layout_change_course_ware"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <TextView
                    style="@style/audio_text_style"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/audio_change_course_ware"
                    android:text="@string/change_course_ware"/>

            <View
                    style="@style/audio_view_style"
                    android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/layout_whole_gag"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <TextView
                    android:id="@+id/tv_audio_whole_gag"
                    style="@style/audio_text_style"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/audio_whole_gag"
                    android:text="@string/whole_gag"/>

            <View
                    style="@style/audio_view_style"
                    android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/layout_interactive_quzi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <TextView
                    style="@style/audio_text_style"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/audio_interactive_quzi"
                    android:text="@string/interactive_quzi"
                    android:textColor="@color/common_light_text_color"/>

            <View
                    style="@style/audio_view_style"
                    android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/layout_upload_course_ware"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <TextView
                    style="@style/audio_text_style"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/audio_upload_course_ware"
                    android:text="@string/upload_course_ware"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>